z-index fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,7 +47,7 @@ a{
 }
 
 .header {
-	z-index: 20;
+	z-index: 60;
 	position: fixed;
 	width: 100%;
 	background: #ffffff;
